--- a/src/styles/dragons.css
+++ b/src/styles/dragons.css
@@ -1,5 +1,7 @@
 .dragon-card {
   border: none;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1); /* Sombra sutil alrededor de la tarjeta */
+  margin-bottom: 15px;
 }
 
 .dragon-image {
@@ -14,8 +16,13 @@
 .card-container {
   margin-left: 5%;
   width: 100%;
+  padding: 15px;
 }
 
 .dragon-title {
   font-size: 23px;
+}
+
+.row {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
