--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -12,10 +12,14 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 180px;
+  height: 125px;
   text-align: center;
   width: 100%;
   align-items: center;
+}
+
+.parentcontainer300 {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .container300 {
@@ -48,4 +52,12 @@
 
 .container300 > h1 {
   min-width: 150px;
+}
+
+.separator {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 15px;
+  margin-right: 20px;
 }
